chore: move content folder into root

--- a/content/projects/chat-app.mdx
+++ b/content/projects/chat-app.mdx
@@ -1,6 +1,6 @@
 ---
 title: Chat app
-summary: 使用 Vue 3 + firebase 製作的聊天室
+summary: 使用 Vue 3、firebase 製作的即時聊天室
 image: /images/terraria-store.png
 ---
 
