--- a/content/projects/terraria-store.mdx
+++ b/content/projects/terraria-store.mdx
@@ -1,6 +1,6 @@
 ---
 title: Terraria電商
-summary: 用自己最愛玩的遊戲 Terraria 當主題的作品 word wordword word word word word word word word
+summary: 以 Terraria 為主題製作的模擬電商
 image: /images/terraria-store.png
 ---
 
