--- a/content/projects/travel-guide.mdx
+++ b/content/projects/travel-guide.mdx
@@ -1,6 +1,6 @@
 ---
 title: 台灣旅遊網站
-summary: 使用 vue 3 + 串接 tdx api 來製作的旅遊網站
+summary: 一個可查詢台灣在地美食、活動、住宿等等的網站．
 image: /images/terraria-store.png
 ---
 
