change mdx content

--- a/content/blog/test-post/index.mdx
+++ b/content/blog/test-post/index.mdx
@@ -4,18 +4,17 @@ publishedAt: 2023-07-10
 summary: 這是一篇測試文章
 ---
 
+# h1
 測試段落測試段落測試段落測試段落測試段落測試段落測試段落測試段落測試段落測試段落測試段落測試段落測試段落測試段落測試段落測試段落測試段落
 
-## 測試標題 h2
+## h2
+---
 測試段落測試段落測試段落測試段落測試段落測試段落測試段落測試段落測試段落測試段落測試段落測試段落測試段落測試段落測試段落測試段落測試段落
 
-## 測試標題 h2
+### h3
 測試段落測試段落測試段落測試段落測試段落測試段落測試段落測試段落測試段落測試段落測試段落測試段落測試段落測試段落測試段落測試段落測試段落測試段落
 
-## 測試標題 h2
-測試段落測試段落測試段落測試段落測試段落測試段落測試段落測試段落測試段落測試段落測試段落測試段落測試段落測試段落測試段落測試段落測試段落測試段落
-
-## 測試標題 h2
+#### h4
 測試段落測試段落測試段落測試段落測試段落測試段落測試段落測試段落測試段落測試段落測試段落測試段落測試段落測試段落測試段落測試段落測試段落測試段落
 
 - item 1
@@ -41,19 +40,20 @@ dolore dolor reprehenderit aliquip. Reprehenderit cillum mollit eiusmod
 excepteur elit ipsum aute pariatur in. Cupidatat ex culpa velit culpa ad non
 labore exercitation irure laborum.
 
-```js title="layout.js"
-// comment
-function layout() {
-	return (
-		<div>Layout</div>
-	)
-}
-```
-
 ```js {1}
+//comment
 function HelloWord() {
 	return (
 		<div>Hello World!</div>
 	);
 }
+```
+
+```js
+const string = '';
+const bollean = false;
+```
+
+```js
+const string = 'hello world';
 ```
