--- a/content/pages/about/index.mdx
+++ b/content/pages/about/index.mdx
@@ -2,12 +2,12 @@
 
 空閒的時後，我喜歡看漫畫 📚、打電動 🎮、打籃球 🏀，以及閱讀和探索科技領域的新技術，嘗試用新技術來開發有趣的專案。
 
-<Heading className='mb-4' hasUnderline>個人經歷</Heading>
+<Heading className='mb-4'>個人經歷</Heading>
 - **1998**．出生於台灣的桃園
 - **2021**．畢業於銘傳大學 - 電腦與工程學系
 - **2022 - 現在**．於小熊科技擔任前端工程師
 
-<Heading className='mb-4' hasUnderline>關於網站</Heading>
+<Heading className='mb-4'>關於網站</Heading>
 - 框架：[Next](https://nextjs.org/)
 - 資料庫：[PlanetScale](https://planetscale.com/)
 - ORM：[Prisma](https://www.prisma.io/)
