remove heading component

--- a/content/pages/about/index.en.mdx
+++ b/content/pages/about/index.en.mdx
@@ -6,12 +6,12 @@ Hello, I'm Tom Jin, Jin Zhengrong, a frontend engineer from Taiwan with a strong
 
 During my free time, I enjoy reading manga 📚, playing video games 🎮, playing basketball 🏀, and exploring new technologies in the tech field. I like to experiment with new technologies to create interesting projects.
 
-<Heading className='mb-4' hasUnderline>Bio</Heading>
+## Bio
 - **1998** Born in Taoyuan, Taiwan.
 - **2021**．Graduated from Ming Chuan University with a degree in Computer Science and Engineering.
 - **2022 - 現在**Currently employed as a frontend engineer at @iBears Technology.
 
-<Heading className='mb-4' hasUnderline>About The Site</Heading>
+## About The Site
 - Framework: [Next](https://nextjs.org/)
 - Database: [PlanetScale](https://planetscale.com/)
 - ORM: [Prisma](https://www.prisma.io/)
