feat: update all stuff

--- a/content/blog/test-post2/index.mdx
+++ b/content/blog/test-post2/index.mdx
@@ -1,49 +1,36 @@
 ---
-title: 台灣旅遊網站
-summary: 一個可查詢台灣在地美食、活動、住宿等等的網站．
-image: /images/terraria-store.png
+title: 測試文章2
+description: 這這是一篇測試文章
+publishedAt: 2022-07-10
+imageSrc: /images/test.jpg
+language: zh-TW
 ---
 
-## 測試標題 h2
----
+## This is title h2
 測試段落測試段落測試段落測試段落測試段落測試段落測試段落測試段落測試段落測試段落測試段落測試段落測試段落測試段落測試段落測試段落測試段落
 
-### 測試標題 h3
-測試段落測試段落測試段落測試段落測試段落測試段落測試段落測試段落測試段落測試段落測試段落測試段落測試段落測試段落測試段落測試段落測試段落
-
-#### 測試標題 h4
+### h3
 測試段落測試段落測試段落測試段落測試段落測試段落測試段落測試段落測試段落測試段落測試段落測試段落測試段落測試段落測試段落測試段落測試段落測試段落
 
-##### 測試標題 h5
+#### h4
 測試段落測試段落測試段落測試段落測試段落測試段落測試段落測試段落測試段落測試段落測試段落測試段落測試段落測試段落測試段落測試段落測試段落測試段落
-
-###### 測試標題 h6
-測試段落測試段落測試段落測試段落測試段落測試段落測試段落測試段落測試段落測試段落測試段落測試段落測試段落測試段落測試段落測試段落測試段落測試段落
-
----
 
 - item 1
 - item 2
 - item 3
 - item 4
 
----
-
-{/* - [x] todo 1
+- [x] todo 1
 - [ ] todo 2
 - [ ] todo 3
 - [ ] todo 4
-- [ ] todo 5 */}
+- [ ] todo 5
 
----
-
-![image](/images/test.jpg)
+<Image width='300' height='300' src='/images/test.jpg' alt='test' />
 
 [rehype-pretty-code](https://rehype-pretty-code.netlify.app/)
 
 > quote quote quote quote quote quote quote quotequote quote quote quotequote quote quote quote
-
----
 
 *Mollit* nisi `cillum` **exercitation** minim officia velit laborum non Lorem
 adipisicing dolore. Labore commodo consectetur commodo velit adipisicing irure
@@ -51,21 +38,20 @@ dolore dolor reprehenderit aliquip. Reprehenderit cillum mollit eiusmod
 excepteur elit ipsum aute pariatur in. Cupidatat ex culpa velit culpa ad non
 labore exercitation irure laborum.
 
----
-
-```js title="layout.js"
-// comment
-function layout() {
-	return (
-		<div>Layout</div>
-	)
-}
-```
-
 ```js {1}
+//comment
 function HelloWord() {
 	return (
 		<div>Hello World!</div>
 	);
 }
+```
+
+```js
+const string = '';
+const bollean = false;
+```
+
+```js
+const string = 'hello world';
 ```
