--- a/content/pages/about/index.en.mdx
+++ b/content/pages/about/index.en.mdx
@@ -2,20 +2,18 @@
 language: 'en'
 ---
 
-Hello, I'm Tom Jin, Jin Zhengrong, a frontend engineer from Taiwan with a strong passion for website development. I currently work at Little Bear Technology, where I primarily use React and Ant Design to develop custom components and features for the company. I also use Next.js to work on both the frontend and backend systems of websites.
+Hi, I'm Tom Jin, an engineer with over a year's experience in front-end development, currently working at [@ibears.io](https://ibears.io/), focusing on using React and Next.js, and currently practicing Typescript applications in my spare time. At work, I'm involved in both front-end and back-end dashboard development on websites, and these projects have improved my technical skills, as well as my collaboration and problem-solving abilities.
 
-During my free time, I enjoy reading manga 📚, playing video games 🎮, playing basketball 🏀, and exploring new technologies in the tech field. I like to experiment with new technologies to create interesting projects.
+In my free time, I enjoy reading comics 📚, playing video games 🎮, playing basketball 🏀, watching movies, and reading and exploring new technologies in the software field.
+
+Thank you for reading my profile, and feel free to contact me if you'd like to know more about my work experience or suggestions for the blog.
 
 ## Bio
-- **1998** Born in Taoyuan, Taiwan.
-- **2021**．Graduated from Ming Chuan University with a degree in Computer Science and Engineering.
-- **2022 - 現在**Currently employed as a frontend engineer at @iBears Technology.
+- **2021**．Graduated from Ming Chuan University - Department of Computer and Engineering.
+- **2022 - Present**．Front-end engineer at @ibears.io.
 
-## About The Site
-- Framework: [Next](https://nextjs.org/)
-- Database: [PlanetScale](https://planetscale.com/)
-- ORM: [Prisma](https://www.prisma.io/)
-- Styling: [Tailwindcss](https://tailwindcss.com/)
-- Animation: [Framer Motion](https://www.framer.com/motion/)
-- Deployment: [Vercel](https://vercel.com/)
-- Content Management: [Contentlayer](https://www.contentlayer.dev/)
+## Contact
+- [Github](https://github.com/tommm2)
+- [Linkedin](https://www.linkedin.com/in/jinrup/)
+
+
