--- a/content/projects/chat-app/index.mdx
+++ b/content/projects/chat-app/index.mdx
@@ -1,7 +1,8 @@
 ---
 title: Chat app
-summary: 使用 Vue 3、firebase 製作的即時聊天室
+description: 使用 Vue 3、firebase 製作的即時聊天室
 image: /images/terraria-store.png
+language: 'zh-TW'
 ---
 
 ## 測試標題 h2
@@ -30,7 +31,6 @@ image: /images/terraria-store.png
 - [ ] todo 4
 - [ ] todo 5
 
-![image](/images/test.jpg)
 <Image width='300' height='300' src='/images/test.jpg' alt='test' />
 
 [rehype-pretty-code](https://rehype-pretty-code.netlify.app/)
