--- a/content/projects/f2e-website/index.mdx
+++ b/content/projects/f2e-website/index.mdx
@@ -1,7 +1,8 @@
 ---
-title: Terraria電商
-summary: 以 Terraria 為主題製作的模擬電商
+title: F2E 活動網站
+description: 使用 greenstock 製作的動畫網站
 image: /images/terraria-store.png
+language: 'zh-TW'
 ---
 
 ## 測試標題 h2
