--- a/content/blog/test-post2/index.en.mdx
+++ b/content/blog/test-post2/index.en.mdx
@@ -1,7 +1,7 @@
 ---
-title: How to use contentelayer and Next.js build the blog
+title: test post 2
 description: This is the Test Posts
-publishedAt: 2023-07-10
+publishedAt: 2022-07-10
 imageSrc: /images/test.jpg
 language: en
 ---
