--- a/content/projects/terraria-store/index.mdx
+++ b/content/projects/terraria-store/index.mdx
@@ -1,20 +1,27 @@
 ---
-title: 測試文章
-description: 這這是一篇測試文章這這是一篇測試文章這這是一篇測試文章這這是一篇測試文章這這是一篇測試文章這這是一篇測試文章
-publishedAt: 2023-07-10
-imageSrc: /images/test.jpg
-language: zh-TW
+title: Terraria電商
+description: 以 Terraria 為主題製作的模擬電商
+image: /images/terraria-store.png
+language: 'zh-TW'
 ---
 
-## This is title h2
+## 測試標題 h2
+---
 測試段落測試段落測試段落測試段落測試段落測試段落測試段落測試段落測試段落測試段落測試段落測試段落測試段落測試段落測試段落測試段落測試段落
 
-### h3
+### 測試標題 h3
+測試段落測試段落測試段落測試段落測試段落測試段落測試段落測試段落測試段落測試段落測試段落測試段落測試段落測試段落測試段落測試段落測試段落
+
+#### 測試標題 h4
 測試段落測試段落測試段落測試段落測試段落測試段落測試段落測試段落測試段落測試段落測試段落測試段落測試段落測試段落測試段落測試段落測試段落測試段落
 
-#### h4
+##### 測試標題 h5
 測試段落測試段落測試段落測試段落測試段落測試段落測試段落測試段落測試段落測試段落測試段落測試段落測試段落測試段落測試段落測試段落測試段落測試段落
 
+###### 測試標題 h6
+測試段落測試段落測試段落測試段落測試段落測試段落測試段落測試段落測試段落測試段落測試段落測試段落測試段落測試段落測試段落測試段落測試段落測試段落
+
+---
 - item 1
 - item 2
 - item 3
@@ -26,6 +33,9 @@ language: zh-TW
 - [ ] todo 4
 - [ ] todo 5
 
+![image](/images/test.jpg)
+<Image width='300' height='300' src='/images/test.jpg' alt='test' />
+
 [rehype-pretty-code](https://rehype-pretty-code.netlify.app/)
 
 > quote quote quote quote quote quote quote quotequote quote quote quotequote quote quote quote
@@ -36,20 +46,19 @@ dolore dolor reprehenderit aliquip. Reprehenderit cillum mollit eiusmod
 excepteur elit ipsum aute pariatur in. Cupidatat ex culpa velit culpa ad non
 labore exercitation irure laborum.
 
+```js title="layout.js"
+// comment
+function layout() {
+	return (
+		<div>Layout</div>
+	)
+}
+```
+
 ```js {1}
-//comment
 function HelloWord() {
 	return (
 		<div>Hello World!</div>
 	);
 }
-```
-
-```js
-const string = '';
-const bollean = false;
-```
-
-```js
-const string = 'hello world';
 ```
