--- a/content/projects/travel-guide/index.mdx
+++ b/content/projects/travel-guide/index.mdx
@@ -1,7 +1,8 @@
 ---
-title: F2E 活動網站
-summary: 使用 greenstock 製作的動畫網站
+title: 台灣旅遊網站
+description: 一個可查詢台灣在地美食、活動、住宿等等的網站．
 image: /images/terraria-store.png
+language: 'zh-TW'
 ---
 
 ## 測試標題 h2
@@ -21,29 +22,37 @@ image: /images/terraria-store.png
 測試段落測試段落測試段落測試段落測試段落測試段落測試段落測試段落測試段落測試段落測試段落測試段落測試段落測試段落測試段落測試段落測試段落測試段落
 
 ---
+
 - item 1
 - item 2
 - item 3
 - item 4
 
-- [x] todo 1
+---
+
+{/* - [x] todo 1
 - [ ] todo 2
 - [ ] todo 3
 - [ ] todo 4
-- [ ] todo 5
+- [ ] todo 5 */}
+
+---
 
 ![image](/images/test.jpg)
-<Image width='300' height='300' src='/images/test.jpg' alt='test' />
 
 [rehype-pretty-code](https://rehype-pretty-code.netlify.app/)
 
 > quote quote quote quote quote quote quote quotequote quote quote quotequote quote quote quote
+
+---
 
 *Mollit* nisi `cillum` **exercitation** minim officia velit laborum non Lorem
 adipisicing dolore. Labore commodo consectetur commodo velit adipisicing irure
 dolore dolor reprehenderit aliquip. Reprehenderit cillum mollit eiusmod
 excepteur elit ipsum aute pariatur in. Cupidatat ex culpa velit culpa ad non
 labore exercitation irure laborum.
+
+---
 
 ```js title="layout.js"
 // comment
