--- a/content/blog/test-post/index.mdx
+++ b/content/blog/test-post/index.mdx
@@ -36,7 +36,7 @@ dolore dolor reprehenderit aliquip. Reprehenderit cillum mollit eiusmod
 excepteur elit ipsum aute pariatur in. Cupidatat ex culpa velit culpa ad non
 labore exercitation irure laborum.
 
-```js {1}
+```js title="sdqwe" {1}
 //comment
 function HelloWord() {
 	return (
@@ -45,11 +45,11 @@ function HelloWord() {
 }
 ```
 
-```js
+```js title="sdjdowe"
 const string = '';
 const bollean = false;
 ```
 
-```js
+```js title="sdwe"
 const string = 'hello world';
 ```
