--- a/content/projects/f2e-website/index.mdx
+++ b/content/projects/f2e-website/index.mdx
@@ -1,6 +1,6 @@
 ---
 title: F2E 活動網站
-description: 使用 greenstock 製作的動畫網站
+description: 使用 greenstock 製作的動畫網站使用 greenstock 製作的動畫網站使用 greenstock 製作的動畫網站
 image: /images/terraria-store.png
 language: 'zh-TW'
 ---
