--- a/content/blog/test-post/index.en.mdx
+++ b/content/blog/test-post/index.en.mdx
@@ -2,7 +2,7 @@
 title: How to use contentelayer and Next.js build the blog
 description: This is the Test Posts
 publishedAt: 2023-07-10
-imageSrc: /images/test.jpg
+image: /images/test.jpg
 language: en
 ---
 
