--- a/content/blog/test-post/index.mdx
+++ b/content/blog/test-post/index.mdx
@@ -2,7 +2,7 @@
 title: 測試文章
 description: 這這是一篇測試文章這這是一篇測試文章這這是一篇測試文章這這是一篇測試文章這這是一篇測試文章這這是一篇測試文章
 publishedAt: 2023-07-10
-imageSrc: /images/test.jpg
+image: /images/test.jpg
 language: zh-TW
 ---
 
