--- a/content/blog/test-post2/index.mdx
+++ b/content/blog/test-post2/index.mdx
@@ -2,7 +2,7 @@
 title: 測試文章2
 description: 這這是一篇測試文章
 publishedAt: 2022-07-10
-imageSrc: /images/test.jpg
+image: /images/test.jpg
 language: zh-TW
 ---
 
