--- a/content/pages/about/index.en.mdx
+++ b/content/pages/about/index.en.mdx
@@ -1,19 +1,18 @@
 ---
 language: 'en'
 ---
+Hello, I'm Tom Jin, an engineer with over a year of front-end development experience, specialising in projects using the React and Next frameworks.
 
-Hi, I'm Tom Jin, an engineer with over a year's experience in front-end development, currently working at [@ibears.io](https://ibears.io/), focusing on using React and Next.js, and currently practicing Typescript applications in my spare time. At work, I'm involved in both front-end and back-end dashboard development on websites, and these projects have improved my technical skills, as well as my collaboration and problem-solving abilities.
+My scope of work includes client frontend, admin backend UI development, frontend logic and RESTful API stringing. Outside of work, I love contributing to open source projects on GitHub and developing my own blog.
 
-In my free time, I enjoy reading comics 📚, playing video games 🎮, playing basketball 🏀, watching movies, and reading and exploring new technologies in the software field.
+In my spare time, I enjoy reading comics 📚, playing video games 🎮, enjoying basketball 🏀, and watching movies.
 
-Thank you for reading my profile, and feel free to contact me if you'd like to know more about my work experience or suggestions for the blog.
+Thank you for reading my profile. If you want to know more about my experience or have any suggestions about blogging, please feel free to contact me!
 
 ## Bio
+- **2022 - Present**．Frontend developer at [@ibears.io](https://ibears.io/).
 - **2021**．Graduated from Ming Chuan University - Department of Computer and Engineering.
-- **2022 - Present**．Front-end engineer at @ibears.io.
 
 ## Contact
 - [Github](https://github.com/tommm2)
 - [Linkedin](https://www.linkedin.com/in/jinrup/)
-
-
