--- a/content/pages/about/index.mdx
+++ b/content/pages/about/index.mdx
@@ -1,16 +1,16 @@
 ---
 language: zh-TW
 ---
-嗨，我是 **Tom Jin 金政融**，一名擁有一年多前端開發經驗的工程師，目前在[小熊科技](https://ibears.io/)工作，專注於使用 React 和 Next.js，目前在空餘則在練習 Typescript 上的應用。
-在工作上，我參與了網站的前台以及後台 dashboard 上的開發，這些專案提升了我的技術，也鍛煉了我的協作和問題解決能力。
+哈囉，**我是Tom Jin 金政融**，一位擁有一年多前端開發經驗的工程師，專注於使用 React 和 Next 框架進行專案開發。
 
-在我空閒的時候，我喜歡看漫畫 📚、打電動 🎮、打籃球 🏀、看電影，以及閱讀和探索軟體領域的新技術。
+我的工作範疇包括客戶端前台、管理後台的 UI 開發、前端邏輯和 RESTful API 串接。除了工作之外，我熱愛在 GitHub 上貢獻開源專案，同時致力於開發個人部落格。
 
-謝謝您讀完我的簡介，如果您想了解更多關於我的工作經驗或者對部落格的建議，請隨時聯繫我。
+閒暇之餘，我喜歡沉看漫畫📚、打電動🎮、享受籃球的樂趣🏀、以及看電影。
 
-## Bio
-- **2021**．畢業於銘傳大學 - 電腦與工程學系
-- **2022 - 現在**．在小熊科技擔任前端工程師
+謝謝您讀完我的簡介，如果您想了解我的經歷或是對部落格有任何建議，請隨時與我取得聯繫！
+
+## Experience
+- **2022 - 現在**．在[小熊科技](https://ibears.io/)擔任前端工程師
 
 ## Contact
 - [Github](https://github.com/tommm2)
