update: change about content

--- a/content/pages/about/index.en.mdx
+++ b/content/pages/about/index.en.mdx
@@ -3,11 +3,11 @@ language: 'en'
 ---
 Hello, I'm Tom Jin, an engineer with over a year of front-end development experience, specialising in projects using the React and Next frameworks.
 
-My scope of work includes client frontend, admin backend UI development, frontend logic and RESTful API stringing. Outside of work, I love contributing to open source projects on GitHub and developing my own blog.
+My scope of work includes client frontend, admin backend UI development, frontend logic and RESTful API stringing. Outside of work, I enjoy contributing to open source projects on GitHub and developing my own blog.
 
-In my spare time, I enjoy reading comics 📚, playing video games 🎮, enjoying basketball 🏀, and watching movies.
+In my spare time, I enjoy reading comics 📚, playing games 🎮, basketball 🏀, and watching movies.
 
-Thank you for reading my profile. If you want to know more about my experience or have any suggestions about blogging, please feel free to contact me!
+Thanks for reading my profile. If you want to know more about my experience or have any suggestions about blogging, please feel free to contact me!
 
 ## Bio
 - **2022 - Present**．Frontend developer at [@ibears.io](https://ibears.io/).
