feat: add callout component

--- a/content/blog/test-post/index.mdx
+++ b/content/blog/test-post/index.mdx
@@ -13,12 +13,28 @@ language: zh-TW
 測試段落測試段落測試段落測試段落測試段落測試段落測試段落測試段落測試段落測試段落測試段落測試段落測試段落測試段落測試段落測試段落測試段落測試段落
 
 #### h4
-測試段落測試段落測試段落測試段落測試段落測試段落測試段落測試段落測試段落測試段落測試段落測試段落測試段落測試段落測試段落測試段落測試段落測試段落
+**測試**段落測試段落測試段落測試段落測試段落測試段落測試段落測試段落測試段落測試段落測試段落測試段落測試段落測試段落測試段落測試段落測試段落測試段落
 
 - item 1
 - item 2
 - item 3
 - item 4
+
+<Callout>
+  **strong strong** Irure enim pariatur deserunt occaecat laboris pariatur.
+</Callout>
+
+<Callout type='error'>
+   **strong strong** Irure enim pariatur deserunt occaecat laboris pariatur Irure enim pariatur deserunt occaecat laboris pariatur.
+</Callout>
+
+<Callout type='warning'>
+   **strong strong** Irure enim pariatur deserunt occaecat laboris pariatur.
+</Callout>
+
+<Callout type='info'>
+  **strong strong** Irure enim pariatur deserunt occaecat laboris pariatur.
+</Callout>
 
 - [x] todo 1
 - [ ] todo 2
