update: modify about content

--- a/content/pages/about/index.en.mdx
+++ b/content/pages/about/index.en.mdx
@@ -11,7 +11,7 @@ Thanks for reading my profile. If you want to know more about my experience or h
 
 ## Bio
 - **2022 - Present**．Frontend developer at [@ibears.io](https://ibears.io/).
-- **2021**．Graduated from Ming Chuan University - Department of Computer and Engineering.
+- **2017 - 2021**．Graduated from Ming Chuan University - Department of Computer and Engineering.
 
 ## Contact
 - [Github](https://github.com/tommm2)
