--- a/content/pages/about/index.mdx
+++ b/content/pages/about/index.mdx
@@ -11,6 +11,7 @@ language: zh-TW
 
 ## Experience
 - **2022 - 現在**．在[小熊科技](https://ibears.io/)擔任前端工程師
+- **2017 - 2021**．畢業於[銘傳大學 - 電腦與通訊工程](https://sites.google.com/view/mcuite)
 
 ## Contact
 - [Github](https://github.com/tommm2)
