update: modify about content

--- a/content/pages/about/index.mdx
+++ b/content/pages/about/index.mdx
@@ -1,7 +1,7 @@
 ---
 language: zh-TW
 ---
-哈囉，**我是Tom Jin 金政融**，一位擁有一年多前端開發經驗的工程師，專注於使用 React 和 Next 框架進行專案開發。
+哈囉，我是**Tom Jin 金政融**，一位擁有一年多前端開發經驗的工程師，專注於使用 React 和 Next 框架進行專案開發。
 
 我的工作範疇包括客戶端前台、管理後台的 UI 開發、前端邏輯和 RESTful API 串接。除了工作之外，我熱愛在 GitHub 上貢獻開源專案，同時致力於開發個人部落格。
 
