update: about content

--- a/content/pages/about/index.en.mdx
+++ b/content/pages/about/index.en.mdx
@@ -1,18 +1,23 @@
 ---
 language: 'en'
 ---
-Hello, I'm Tom Jin, an engineer with over a year of front-end development experience, specialising in projects using the React and Next frameworks.
 
-My scope of work includes client frontend, admin backend UI development, frontend logic and RESTful API stringing. Outside of work, I enjoy contributing to open source projects on GitHub and developing my own blog.
+Hello! I'm Tom Jin, currently working as a software engineer in Taiwan, with a focus on project development using React and Next frameworks.
 
-In my spare time, I enjoy reading comics 📚, playing games 🎮, basketball 🏀, and watching movies.
+My work includes client front-end development, admin back-end development, front-end logic design, and RESTful APIs.
 
-Thanks for reading my profile. If you want to know more about my experience or have any suggestions about blogging, please feel free to contact me!
+In addition to my work, I've recently started to actively participate in open source projects on GitHub, and I'm working on a personal blog to share my thoughts and experiences through writing.
+
+In my spare time, I enjoy reading comics 📚, playing video games 🎮, basketball 🏀, and watching movies 🎥.
+
+Thank you for taking the time to read my profile. If you have any questions about my experience or suggestions for my blog, please feel free to contact me!
 
 ## Experience
+
 - **2022 - Present**．Frontend developer at [@ibears.io](https://ibears.io/).
 - **2017 - 2021**．Graduated from Ming Chuan University - Department of Computer and Engineering.
 
 ## Contact
+
 - [Github](https://github.com/tommm2)
 - [Linkedin](https://www.linkedin.com/in/jinrup/)
