--- a/content/pages/about/index.mdx
+++ b/content/pages/about/index.mdx
@@ -1,19 +1,21 @@
 ---
 language: zh-TW
 ---
-哈囉，我是**Tom Jin 金政融**，一位擁有一年多前端開發經驗的工程師，專注於使用 React 和 Next 框架進行專案開發。
 
-我的工作範疇包括客戶端前台、管理後台的 UI 開發、前端邏輯和 RESTful API 串接。除了工作之外，我熱愛在 GitHub 上貢獻開源專案，同時致力於開發個人部落格。
+哈囉！我是Tom Jin 金政融，，目前在台灣擔任軟體工程師，專注於使用 React 和 Next 框架進行專案開發。
 
-閒暇之餘，我喜歡沉看漫畫📚、打電動🎮、享受籃球的樂趣🏀、以及看電影。
+我的工作範疇包括客戶端前台、管理後台的開發、前端邏輯的設計，以及 RESTful API 的串接。除了工作之外，我最近開始在 GitHub 上積極參與開源專案，同時致力於打造個人部落格，透過寫作分享自己的想法和經驗。
 
-謝謝您讀完我的簡介，如果您想了解我的經歷或是對部落格有任何建議，請隨時與我取得聯繫！
+在閒暇時，我喜歡閱讀漫畫📚、打電動🎮、籃球🏀，還有欣賞各種電影🎥。
+
+感謝您抽空閱讀我的簡介。如果對我的經歷有任何疑問或對我的部落格有建議，非常歡迎與我聯繫！
 
 ## Experience
+
 - **2022 - 現在**．在[小熊科技](https://ibears.io/)擔任前端工程師
-- **2017 - 2021**．畢業於[銘傳大學 - 電腦與通訊工程](https://sites.google.com/view/mcuite)
+- **2017 - 2021**．畢業於銘傳大學 - 電腦與通訊工程
 
 ## Contact
+
 - [Github](https://github.com/tommm2)
 - [Linkedin](https://www.linkedin.com/in/jinrup/)
-
