--- a/content/pages/about/index.mdx
+++ b/content/pages/about/index.mdx
@@ -2,9 +2,9 @@
 language: zh-TW
 ---
 
-哈囉！我是Tom Jin 金政融，，目前在台灣擔任軟體工程師，專注於使用 React 和 Next 框架進行專案開發。
+哈囉！我是Tom Jin 金政融，我是一位前端工程師，專注於使用 React 和 Next 框架進行專案開發。
 
-我的工作範疇包括客戶端前台、管理後台的開發、前端邏輯的設計，以及 RESTful API 的串接。除了工作之外，我最近開始在 GitHub 上積極參與開源專案，同時致力於打造個人部落格，透過寫作分享自己的想法和經驗。
+我的工作範疇包括開發客戶端前台 UI、管理員後台 UI、前端邏輯的設計，以及 RESTful API 的串接。除了工作之外，我最近開始在 GitHub 上積極參與開源專案，同時致力於打造個人部落格，透過寫作分享自己的想法和經驗。
 
 在閒暇時，我喜歡閱讀漫畫📚、打電動🎮、籃球🏀，還有欣賞各種電影🎥。
 
