docs: update about content

--- a/content/pages/about/index.en.mdx
+++ b/content/pages/about/index.en.mdx
@@ -4,7 +4,7 @@ language: 'en'
 
 Hello! I'm Tom Jin, currently working as a software engineer in Taiwan, with a focus on project development using React and Next frameworks.
 
-My work includes client front-end development, admin back-end development, front-end logic design, and RESTful APIs.
+My work includes client UI, admin dashboard UI, front-end logic design, and RESTful APIs.
 
 In addition to my work, I've recently started to actively participate in open source projects on GitHub, and I'm working on a personal blog to share my thoughts and experiences through writing.
 
