doc: update test post

--- a/content/blog/test-post/index.en.mdx
+++ b/content/blog/test-post/index.en.mdx
@@ -1,8 +1,7 @@
 ---
-title: How to use contentelayer and Next.js build the blog
-description: This is the Test Posts
+title: Test Post
+description: This is the Test Post
 publishedAt: 2023-07-10
-image: /images/test.jpg
 language: en
 ---
 
