docs: update about content

--- a/content/pages/about/index.mdx
+++ b/content/pages/about/index.mdx
@@ -10,12 +10,12 @@ language: zh-TW
 
 感謝您抽空閱讀我的簡介。如果對我的經歷有任何疑問或對我的部落格有建議，非常歡迎與我聯繫！
 
-## Experience
+## 工作經歷
 
 - **2022 - 現在**．在[小熊科技](https://ibears.io/)擔任前端工程師
 - **2017 - 2021**．畢業於銘傳大學 - 電腦與通訊工程
 
-## Contact
+## 聯絡我
 
 - [Github](https://github.com/tommm2)
 - [Linkedin](https://www.linkedin.com/in/jinrup/)
