docs: update about content

--- a/content/pages/about/index.en.mdx
+++ b/content/pages/about/index.en.mdx
@@ -2,7 +2,7 @@
 language: 'en'
 ---
 
-Hello! I'm Tom Jin, currently working as a software engineer in Taiwan, with a focus on project development using React and Next frameworks.
+Hello! I'm **Tom Jin**, currently working as a **frontend engineer** in Taiwan, with a focus on React and Next frameworks.
 
 My work includes client UI, admin dashboard UI, front-end logic design, and RESTful APIs.
 
