chore: rename jinrup-dev project

--- a/content/projects/personal-website/index.mdx
+++ b/content/projects/personal-website/index.mdx
@@ -1,9 +1,10 @@
 ---
 title: 個人網站
 description: 使用 TypeScript、Next.js 14 和 Tailwind CSS 建構的個人網站。
-imageUrl: '/projects/jinrup-dev.jpg'
-demoUrl: 'https://jinrup.vercel.app'
+imageUrl: '/projects/personal-website.jpg'
+repoName: 'jinrup.dev'
 repoUrl: 'https://github.com/tommm2/jinrup.dev'
+demoUrl: 'https://jinrup.vercel.app'
 language: zh-TW
 ---
 
