--- a/content/projects/personal-website/index.en.mdx
+++ b/content/projects/personal-website/index.en.mdx
@@ -1,9 +1,10 @@
 ---
 title: Personal Website
 description: My personal website built with TypeScript, Next.js 14, and Tailwind CSS.
-imageUrl: '/projects/jinrup-dev.jpg'
-demoUrl: 'https://jinrup.vercel.app'
+imageUrl: '/projects/personal-website.jpg'
+repoName: 'jinrup.dev'
 repoUrl: 'https://github.com/tommm2/jinrup.dev'
+demoUrl: 'https://jinrup.vercel.app'
 language: en
 ---
 
