docs: update post

--- a/content/blog/learning-and-inspiration/index.mdx
+++ b/content/blog/learning-and-inspiration/index.mdx
@@ -1,17 +1,14 @@
 ---
-title: 我的個人網站：一趟學習和靈感的旅程
-description: 製作個人網站的學習與啟發
+title: '我的個人網站：一趟學習和靈感的旅程'
+description: '製作個人網站的學習與啟發.'
 publishedAt: 2024-01-10
-language: zh-TW
+language: 'zh-TW'
 ---
 
-哈囉大家！我的個人網站終於完成了！在這過程中讓我摸到了很多之前沒碰過的技術，我想在這裡分享一些過程中的心得、使用的技術，以及一些給我靈感的網站。
+哈囉大家！我的個人網站終於完成了！在這過程中讓我摸到了很多之前沒碰過的技術，我想在這裡分享一些使用的技術，以及一些給我靈感的網站。
 
-## 開發之路
-
-在開發過程中，我發現要創建一個好的網站需要考慮的層面相當多。首先，我注意到使用 **Lighthouse 擴充工具**來評估網站的性能表現是一個重要的步驟。這包括優化**網站的載入速度**、提升**可訪問性**和**搜尋引擎最佳化**等等，以確保我個人網站能夠在各方面表現出色，而且四項指標都有 100 分時還會放煙火，非常有成就感XD。
-
-除此之外，我也使用了一些之前沒碰過的技術：
+## 使用技術
+這裡的都是一些我之前未曾用過的技術，這也讓我在開發過程中非常快樂，有種讓自己升等的感覺：
 - [next-intl](https://next-intl-docs.vercel.app)：實現網站的多國語系支援。
 - [Framer motion](https://www.framer.com/motion/)：非常方便的動畫庫，雖然 tailwindcss 做出動畫也不難，但一些比較複雜的動畫效果使用 framer-motion 會更方便和簡潔。
 - [PlanetScale](https://planetscale.com/)：一個 Mysql platform，在我的網站用來實現**文章的瀏覽次數**。
@@ -27,11 +24,11 @@ language: zh-TW
 - [UI Verse](https://uiverse.io/)
 - [Next UI](https://nextui.org/)
 
-此外，以下是一些功能豐富且 UI 設計令人嘆為觀止的個人網站，也可以作為參考：
+此外，以下是一些功能豐富且 UI 設計現代簡約的個人網站：
 - [leerob.io](https://leerob.io)
 - [delba.dev](https://delba.dev/)
 - [jahir.dev](https://jahir.dev/)
 - [honghong.me](https://honghong.me/)
 
 ## 結論
-學習不僅僅是吸收新知識，更是在輸入之後能夠持續輸出的過程。正因如此，我才有了開發部落格的動機。透過部落格，我有機會分享所學知識給其他人，也可以得到其他人不同的反饋，共同成長。
+學習不僅僅是吸收新知識，更是在輸入之後能夠持續輸出的過程。正因如此，我才有了開發這格網站的動機。透過這裡，我有機會分享自己的想法給其他人，也可以得到不同的反饋，共同成長。
