docs: update post

--- a/content/blog/learning-and-inspiration/index.en.mdx
+++ b/content/blog/learning-and-inspiration/index.en.mdx
@@ -8,10 +8,10 @@ language: 'en'
 Hello everyone! My personal website is now complete. During the process, I learned new techniques that I would like to share, along with some of the sites that inspired me.
 
 ## Tech Stacks
-- [next-intl](https://next-intl-docs.vercel.app)：Multi-language support for the website.。
+- [next-intl](https://next-intl-docs.vercel.app)：Multi-language support for the website.
 - [Framer motion](https://www.framer.com/motion/)：A useful animation library that can simplify complex animation effects, which may be more difficult to achieve with tailwindcss alone.
 - [PlanetScale](https://planetscale.com/)：My website uses a MySQL platform to track **post views**.
-- [Prisma](https://www.prisma.io/)：This ORM library is designed for easy interaction with MySQL databases and provides intuitive APIs that simplify the database operation process.。
+- [Prisma](https://www.prisma.io/)：This ORM library is designed for easy interaction with MySQL databases and provides intuitive APIs that simplify the database operation process.
 - [Contentlayer](https://www.contentlayer.dev/)：Manage the content of my blog posts and projects, and can easily define the information needed for a post, such as post title, description, release date, etc.
 
 ## Inspiration
@@ -22,7 +22,7 @@ I have learned from experience that UI design for a personal website can be time
 - [UI Verse](https://uiverse.io/)
 - [Next UI](https://nextui.org/)
 
-In addition, the following are some feature-rich personal websites with modern and minimalist UI design：
+In addition, the following are some feature-rich personal websites with modern and beautiful UI design：
 - [leerob.io](https://leerob.io)
 - [delba.dev](https://delba.dev/)
 - [jahir.dev](https://jahir.dev/)
