--- a/content/blog/learning-and-inspiration/index.mdx
+++ b/content/blog/learning-and-inspiration/index.mdx
@@ -24,7 +24,7 @@ language: 'zh-TW'
 - [UI Verse](https://uiverse.io/)
 - [Next UI](https://nextui.org/)
 
-此外，以下是一些功能豐富且 UI 設計現代簡約的個人網站：
+此外，以下是一些功能豐富且 UI 設計美觀的個人網站：
 - [leerob.io](https://leerob.io)
 - [delba.dev](https://delba.dev/)
 - [jahir.dev](https://jahir.dev/)
