docs: update post content

--- a/content/blog/learning-and-inspiration/index.en.mdx
+++ b/content/blog/learning-and-inspiration/index.en.mdx
@@ -20,7 +20,7 @@ I have learned from experience that UI design for a personal website can be time
 - [Dark Mode Design](https://www.darkmodedesign.com)
 - [Godly](https://godly.website/)
 - [UI Verse](https://uiverse.io/)
-- [Next UI](https://nextui.org/)
+- [Aceternity UI](https://ui.aceternity.com/components)
 
 In addition, the following are some feature-rich personal websites with modern and beautiful UI design：
 - [leerob.io](https://leerob.io)
