--- a/content/blog/learning-and-inspiration/index.mdx
+++ b/content/blog/learning-and-inspiration/index.mdx
@@ -22,7 +22,7 @@ language: 'zh-TW'
 - [Dark Mode Design](https://www.darkmodedesign.com)
 - [Godly](https://godly.website/)
 - [UI Verse](https://uiverse.io/)
-- [Next UI](https://nextui.org/)
+- [Aceternity UI](https://ui.aceternity.com/components)
 
 此外，以下是一些功能豐富且 UI 設計美觀的個人網站：
 - [leerob.io](https://leerob.io)
