docs: update post content

--- a/content/blog/learning-and-inspiration/index.en.mdx
+++ b/content/blog/learning-and-inspiration/index.en.mdx
@@ -27,6 +27,8 @@ In addition, the following are some feature-rich personal websites with modern a
 - [delba.dev](https://delba.dev/)
 - [jahir.dev](https://jahir.dev/)
 - [honghong.me](https://honghong.me/)
+- [mendable.ai](https://www.mendable.ai/)
+- [nextui.org](https://nextui.org/)
 
 ## Conclusion
 Learning is not only about acquiring new knowledge but also about applying it and continuously sharing it with others. This is why I was inspired to create this website, which allows me to share my ideas and receive feedback to grow together.
