--- a/content/blog/learning-and-inspiration/index.mdx
+++ b/content/blog/learning-and-inspiration/index.mdx
@@ -29,6 +29,8 @@ language: 'zh-TW'
 - [delba.dev](https://delba.dev/)
 - [jahir.dev](https://jahir.dev/)
 - [honghong.me](https://honghong.me/)
+- [mendable.ai](https://www.mendable.ai/)
+- [nextui.org](https://nextui.org/)
 
 ## 結論
 學習不僅僅是吸收新知識，更是在輸入之後能夠持續輸出的過程。正因如此，我才有了開發這格網站的動機。透過這裡，我有機會分享自己的想法給其他人，也可以得到不同的反饋，共同成長。
