--- a/content/blog/learning-and-inspiration/index.en.mdx
+++ b/content/blog/learning-and-inspiration/index.en.mdx
@@ -31,4 +31,4 @@ In addition, the following are some feature-rich personal websites with modern a
 - [nextui.org](https://nextui.org/)
 
 ## Conclusion
-Learning is not only about acquiring new knowledge but also about applying it and continuously sharing it with others. This is why I was inspired to create this website, which allows me to share my ideas and receive feedback to grow together.
+I will continue to share what I have learned here and update my personal website with enhancements, UI improvements, and more. If you have any suggestions or ideas, please feel free to share them with me at any time.
