docs: update post content

--- a/content/blog/learning-and-inspiration/index.en.mdx
+++ b/content/blog/learning-and-inspiration/index.en.mdx
@@ -22,7 +22,7 @@ I have learned from experience that UI design for a personal website can be time
 - [UI Verse](https://uiverse.io/)
 - [Aceternity UI](https://ui.aceternity.com/components)
 
-In addition, the following are some feature-rich personal websites with modern and beautiful UI design：
+In addition, the following are some feature-rich websites with modern and beautiful UI design：
 - [leerob.io](https://leerob.io)
 - [delba.dev](https://delba.dev/)
 - [jahir.dev](https://jahir.dev/)
