--- a/content/blog/learning-and-inspiration/index.mdx
+++ b/content/blog/learning-and-inspiration/index.mdx
@@ -24,7 +24,7 @@ language: 'zh-TW'
 - [UI Verse](https://uiverse.io/)
 - [Aceternity UI](https://ui.aceternity.com/components)
 
-此外，以下是一些功能豐富且 UI 設計美觀的個人網站：
+此外，以下是一些功能豐富且 UI 設計美觀的網站：
 - [leerob.io](https://leerob.io)
 - [delba.dev](https://delba.dev/)
 - [jahir.dev](https://jahir.dev/)
