docs: update post content

--- a/content/blog/learning-and-inspiration/index.mdx
+++ b/content/blog/learning-and-inspiration/index.mdx
@@ -5,7 +5,7 @@ publishedAt: 2024-01-10
 language: 'zh-TW'
 ---
 
-哈囉大家！我的個人網站終於完成了！在這過程中讓我摸到了很多之前沒碰過的技術，我想在這裡分享一些使用的技術，以及一些給我靈感的網站。
+我的個人網站終於完成了！在這過程中讓我摸到了很多之前沒碰過的技術，我想在這裡分享一些使用的技術，以及一些給我靈感的網站。
 
 ## 使用技術
 這裡的都是一些我之前未曾用過的技術，這也讓我在開發過程中非常快樂，有種讓自己升等的感覺：
