docs: update content metadata

--- a/content/blog/learning-and-inspiration/index.en.mdx
+++ b/content/blog/learning-and-inspiration/index.en.mdx
@@ -1,5 +1,6 @@
 ---
 title: 'My Personal Website: A Journey of Learning and Inspiration'
+slug: 'learning-and-inspiration'
 description: 'Learning and Inspiration of Creating a Personal Website.'
 publishedAt: 2024-01-10
 language: 'en'
