--- a/content/blog/learning-and-inspiration/index.mdx
+++ b/content/blog/learning-and-inspiration/index.mdx
@@ -1,5 +1,6 @@
 ---
 title: '我的個人網站：一趟學習和靈感的旅程'
+slug: 'learning-and-inspiration'
 description: '製作個人網站的學習與啟發.'
 publishedAt: 2024-01-10
 language: 'zh-TW'
