--- a/content/projects/personal-website/index.en.mdx
+++ b/content/projects/personal-website/index.en.mdx
@@ -1,5 +1,6 @@
 ---
 title: Personal Website
+slug: personal-website
 description: My personal website built with TypeScript, Next.js 14, and Tailwind CSS.
 imageUrl: '/projects/personal-website.jpg'
 repoName: 'jinrup.dev'
