--- a/content/projects/personal-website/index.mdx
+++ b/content/projects/personal-website/index.mdx
@@ -1,5 +1,6 @@
 ---
 title: 個人網站
+slug: 'personal-website'
 description: 使用 TypeScript、Next.js 14 和 Tailwind CSS 建構的個人網站。
 imageUrl: '/projects/personal-website.jpg'
 repoName: 'jinrup.dev'
