docs: update blog post

--- a/content/blog/learning-and-inspiration/index.mdx
+++ b/content/blog/learning-and-inspiration/index.mdx
@@ -12,7 +12,7 @@ language: 'zh-TW'
 這裡的都是一些我之前未曾用過的技術，這也讓我在開發過程中非常快樂，有種讓自己升等的感覺：
 - [next-intl](https://next-intl-docs.vercel.app)：實現網站的多國語系支援。
 - [Framer motion](https://www.framer.com/motion/)：非常方便的動畫庫，雖然 tailwindcss 做出動畫也不難，但一些比較複雜的動畫效果使用 framer-motion 會更方便和簡潔。
-- [PlanetScale](https://planetscale.com/)：一個 Mysql platform，在我的網站用來實現**文章的瀏覽次數**。
+- [Neon](https://neon.tech/)：一個 postgresql platform，在我的網站用來實現**文章的瀏覽次數**。
 - [Prisma](https://www.prisma.io/)：這個 orm(Object Relational Mapping) library 主要是在操作 mysql 時能輕鬆與資料庫進行交互，而且提供了很多直觀的 api，大大化簡了資料庫操作的流程。
 - [Contentlayer](https://www.contentlayer.dev/)：用來管理我的部落格文章和專案的內文，且能夠很簡單的定義好一個文章需要的資料，例如文章標題、描述、發布日期等等。
 
