--- a/content/blog/learning-and-inspiration/index.en.mdx
+++ b/content/blog/learning-and-inspiration/index.en.mdx
@@ -11,7 +11,7 @@ Hello everyone! My personal website is now complete. During the process, I learn
 ## Tech Stacks
 - [next-intl](https://next-intl-docs.vercel.app)：Multi-language support for the website.
 - [Framer motion](https://www.framer.com/motion/)：A useful animation library that can simplify complex animation effects, which may be more difficult to achieve with tailwindcss alone.
-- [PlanetScale](https://planetscale.com/)：My website uses a MySQL platform to track **post views**.
+- [Neon](https://neon.tech/)：My website uses a postgresql platform to track **post views**.
 - [Prisma](https://www.prisma.io/)：This ORM library is designed for easy interaction with MySQL databases and provides intuitive APIs that simplify the database operation process.
 - [Contentlayer](https://www.contentlayer.dev/)：Manage the content of my blog posts and projects, and can easily define the information needed for a post, such as post title, description, release date, etc.
 
